Deploy fixes, refactors, user handler
