# docs/swagger.json
@@ -311,6 +311,42 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "post": {
+                "description": "Метод создания пользователя.\nИспользуется в случае необходимости вручную добавить пользователя, так как при добавлении сегмента пользователь сохраняется автоматически.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Создание пользователя",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "user_id": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
